Fix 320px resolution overlaping forecast cell

--- a/weather-app/src/app/weather/location-forecast/location-forecast.component.css
+++ b/weather-app/src/app/weather/location-forecast/location-forecast.component.css
@@ -1,3 +1,8 @@
 .mat-column-forecast {
     text-align: end;
 }
+
+.mat-row {
+    padding-left: 0;
+    padding-right: 0;
+}
